--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,10 @@
 <h1>Hello, this is the home page</h1>
-<%= link_to 'Sign up', new_user_registration_path %>
-<%= link_to 'Sign in', new_user_session_path %>
-<%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
-<%= link_to 'My Quizzes', quizzes_path %>
-<%= link_to 'New Quiz', new_quiz_path %>
-<%=%>
+<%= form_tag(search_path, :method => "get",   
+    class: 'search-form') do %>
+  <div class="">
+    <%= search_field_tag :search, params[:search], placeholder: "Search", class: "" %>
+    <div class="input-group-btn">
+      <%= button_tag "Search", :class => '',:name => nil%>
+    </div>
+  </div>
+<% end %>
