--- a/app/views/shared/_react.html.erb
+++ b/app/views/shared/_react.html.erb
@@ -2,6 +2,7 @@
   data-data="<%=data%>" 
   data-current-user="<%=current_user.to_json%>"
   data-page="<%=page%>"
+  data-errors="<%=local_assigns[:errors] ? errors.to_json : nil%>"
   >
 </div>
 <%= javascript_pack_tag 'entry' %>
