--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,23 @@
  *= require_tree .
  *= require_self
  */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
+body {
+  margin: 0;
+  width: 100vw;
+  overflow-x: hidden;
+  font-family: "Poppins", sans-serif;
+}
 .pointer {
   cursor: pointer;
+}
+
+input[type="text"],
+input[type="search"] {
+  border-radius: 8px;
+  border-style: solid;
+  border-width: 1px;
+  font-size: large;
+  padding: 4px;
 }
