--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,9 +1,11 @@
-<%= link_to 'Home', root_path %>
-<% if current_user %>
-  <%= link_to 'My Quizzes', quizzes_path %>
-  <%= link_to 'New Quiz', new_quiz_path %>
-  <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
-<% else %>
-  <%= link_to 'Sign Up', new_user_registration_path %>
-  <%= link_to 'Sign In', new_user_session_path %>
-<% end %>
+<nav>
+  <%= link_to 'Home', root_path %>
+  <% if current_user %>
+    <%= link_to 'My Quizzes', quizzes_path %>
+    <%= link_to 'New Quiz', new_quiz_path %>
+    <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
+  <% else %>
+    <%= link_to 'Sign Up', new_user_registration_path %>
+    <%= link_to 'Sign In', new_user_session_path %>
+  <% end %>
+</nav>
