--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -52,3 +52,13 @@ button:hover {
 a:hover {
   text-decoration: underline;
 }
+
+.home {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  img {
+    margin-bottom: 16px;
+  }
+}
