--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,16 @@
-<h1>Hello, this is the home page</h1>
-<%= form_tag(search_path, :method => "get",   
+<div class="home">
+  <h1>Typing Teachers Treasure Trove</h1>
+  <%= image_tag 'keyboard.svg', alt: 'keyboard.svg', width: '250' %>
+  <% if local_assigns[:errors] %>
+    <%= errors %>
+  <% end %>
+  <%= form_tag(search_path, :method => "get",   
     class: 'search-form') do %>
-  <div class="">
-    <%= search_field_tag :search, params[:search], placeholder: "Search", class: "" %>
-    <div class="input-group-btn">
-      <%= button_tag "Search", :class => '',:name => nil%>
+    <div class="">
+      <%= search_field_tag :search, params[:search], placeholder: "Search", class: "" %>
+      <div class="input-group-btn">
+        <%= button_tag "Search", :class => '',:name => nil%>
+      </div>
     </div>
-  </div>
-<% end %>
+  <% end %>
+</div>
