--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -61,4 +61,9 @@ a:hover {
   img {
     margin-bottom: 16px;
   }
+  .search-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
