--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="home">
-  <h1>Typing Teachers Treasure Trove</h1>
+  <h1>Typing Teacher's Treasure Trove</h1>
   <%= image_tag 'keyboard.svg', alt: 'keyboard.svg', width: '250' %>
   <% if local_assigns[:errors] %>
     <%= errors %>
