--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,10 +28,19 @@ body {
 
 input[type="text"],
 input[type="search"],
-input[type="password"] {
+input[type="password"],
+input[type="email"] {
   border-radius: 8px;
   border-style: solid;
   border-width: 1px;
   font-size: large;
   padding: 4px;
+}
+
+.flex {
+  display: flex;
+}
+
+.column {
+  flex-direction: column;
 }
