--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -44,3 +44,11 @@ input[type="email"] {
 .column {
   flex-direction: column;
 }
+
+.jc {
+  justify-content: center;
+}
+
+.ac {
+  align-items: center;
+}
